@@ -14,6 +14,7 @@ WIP
 * Misc
   - Add "horizontal_gap", "vertical_gap" options for following widgets: Brake pressure, Ride height, Slip ratio, Suspension force, Suspension position, Tyre load.
   - Fixed an issue that would add time increment on pitout prediction (Track map Widget) while outside pit lane.
+  - Renamed "display_orientation" option to "show_inverted_orientation" in Friction circle Widget.
 
 2.28.1 (2025-05-08)
 -----------------------------
